[package]
name = "betternotes"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "betternotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["api-all"] }

[features]
# This feature is used for production builds or when a dev build is running from a packaged app
default = [ "custom-protocol" ]
# This feature will be enabled automatically when building with the standalone recipe
standalone = []
# This feature will allow tarpaulin to work correctly in dev builds
tarpaulin = []
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

